--- a/theme/assets/css/main.css
+++ b/theme/assets/css/main.css
@@ -79,7 +79,7 @@ a:after {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/together1.jpg) no-repeat center top;
+	background: url(../img/together1.JPG) no-repeat center top;
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:center;
