--- a/theme/assets/css/main.css
+++ b/theme/assets/css/main.css
@@ -83,7 +83,7 @@ a:after {
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:center;
-	background-attachment: relative;
+	background-attachment: relative !important;
 	background-position: center center;
 	min-height: 700px;
 	width: 100%;
