--- a/theme/assets/css/main.css
+++ b/theme/assets/css/main.css
@@ -93,6 +93,15 @@ a:after {
     -o-filter: grayscale(100%);
     filter: grayscale(100%);	
 	
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;	
 
 }
 
