--- a/theme/assets/css/main.css
+++ b/theme/assets/css/main.css
@@ -88,20 +88,20 @@ a:after {
 	min-height: 700px;
 	width: 100%;
 
-    -webkit-filter: grayscale(100%);
-    -moz-filter: grayscale(100%);
-    -o-filter: grayscale(100%);
-    filter: grayscale(100%);	
+    -webkit-filter: grayscale(200%);
+    -moz-filter: grayscale(200%);
+    -o-filter: grayscale(200%);
+    filter: grayscale(200%);	
 	
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
     background-size: 100%;
 
-    -webkit-background-size: contain;
-    -moz-background-size: contain;
-    -o-background-size: contain;
-    background-size: contain;	
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;	
 
 }
 
