--- a/theme/assets/css/main.css
+++ b/theme/assets/css/main.css
@@ -82,7 +82,7 @@ a:after {
 	background: url(../img/together1.JPG) no-repeat center top;
 	margin-top: -10px;
 	padding-top:20px;
-	text-align:center;
+	text-align:left;
 	background-attachment: relative ;
 	background-position: center center;
 	min-height: 700px;
