--- a/theme/assets/css/main.css
+++ b/theme/assets/css/main.css
@@ -316,4 +316,25 @@ a:after {
 			transition: all .1s ease-in-out;
 }
 
+.item active centered
+{
 
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: grayscale(100%);	
+	
+	
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;	
+
+
+    border-radius: 7px;
+   -moz-border-radius: 7px;
+   -khtml-border-radius: 7px;
+   -webkit-border-radius: 7px;
+	
+	
+}
