--- a/theme/assets/css/main.css
+++ b/theme/assets/css/main.css
@@ -317,10 +317,9 @@ a:after {
 }
 
 .carousel-inner
-{
-    display: block;
-    margin-left: auto;  
-    margin-right: auto;
+{    
+	
+    text-align: center;
 	
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
