--- a/theme/assets/css/main.css
+++ b/theme/assets/css/main.css
@@ -72,7 +72,7 @@ a:after {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/together3.JPG) no-repeat center top;
+	background: url(../img/together3.jpg) no-repeat center top;
 	margin-top: -10px;
 	padding-top:20px;
 	text-align:center;
